Ajuste na geracao de campeonato